GNOME Bugzilla – Bug 692148
custom command set in profile is not executed when opening terminal
Last modified: 2013-01-20 21:22:40 UTC
terminal_screen_new() calls terminal_screen_set_override_command() with its third parameter, shell, set to FALSE if there is no override_command, but that means get_child_command() will enter its "if (priv->shell)" code path, and not check for TERMINAL_PROFILE_USE_CUSTOM_COMMAND_KEY, therefore not running the custom command that may have been set. This simple patch moves the "if (priv->shell)" check after other checks.
Created attachment 233962 [details] [review] terminal-screen: check for custom command first
Looks good, please commit. Thanks!
commit 7997f486ff3df49ce1b87413c9ba07be72ee8b28 Author: Frédéric Péters <fpeters@0d.be> Date: Sun Jan 20 21:50:55 2013 +0100 terminal-screen: check for custom command first https://bugzilla.gnome.org/show_bug.cgi?id=692148