terminal-screen: check for custom command first

https://bugzilla.gnome.org/show_bug.cgi?id=692148